future: сверстать header секцию

--- a/index.html
+++ b/index.html
@@ -10,7 +10,50 @@
 </head>
 
 <body>
-    
+
+    <header class="header">
+        <div class="container">
+            <div class="header__wrapper">
+
+                <a href="/" aria-label="Go to homepage">
+                    <svg class="logo">
+                        <use href="./assets/sprites.svg#logo-icon"></use>
+                    </svg>
+                </a>
+
+                <nav class="header__nav" aria-label="Main navigation">
+                    <ul class="header__menu">
+                        <li class="header__item">
+                            <a class="header__link" href="#">Why Alivio</a>
+                        </li>
+                        <li class="header__item">
+                            <a class="header__link" href="#">Solutions</a>
+                        </li>
+                        <li class="header__item">
+                            <a class="header__link" href="#">Community</a>
+                        </li>
+                        <li class="header__item">
+                            <a class="header__link" href="#">Pricing</a>
+                        </li>
+                    </ul>
+                </nav>
+
+                <div class="header__actions">
+                    <button type="button" class="btn header__btn--sign" aria-label="Sign in to your account">
+                        Sign in
+                    </button>
+
+                    <button type="button" class="btn" aria-label="Start your free trial">
+                        Start Trial
+                    </button>
+                </div>
+
+            </div>
+        </div>
+    </header>
+
+
+
 </body>
 
 </html>
